--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Maya & Alexis Europe 2019</h1>
-    <h2>London</h2>
+    <h2 class ="london">London</h2>
       <div class="all-images">
         <img src="./images/cake.jpg">
         <img src="./images/palace.jpg">
@@ -18,15 +18,49 @@
         <img src="./images/phone.jpg">
       </div>
     <h2>Paris</h2>
+      <div class="all-images">
+        <img src="./images/paris.jpg">
+        <img src="./images/tower.jpg">
+        <img src="./images/louvre2.jpg">
+        <img src="./images/croissants.jpg">
+        <img src="./images/louvre.jpg">
+        <img src="./images/mona-lisa.jpg">
+      </div>
     <h2>Italy</h2>
       <div class="all-images">
         <img src="./images/coast.jpg">
         <img src="./images/trevi.jpg">
         <img src="./images/gelato.jpg">
+        <img src="./images/pizza.jpg">
+        <img src="./images/duomo.jpg">
+        <img src="./images/rome.jpg">
+      </div>
+    <h2>Budapeset</h2>
+      <div class="all-images">
+        <img src="./images/burger.jpg">
+        <img src="./images/sunset.jpg">
+        <img src="./images/baths.jpg">
+        <img src="./images/bastion.jpg">
+        <img src="./images/selfie.jpg">
+        <img src="./images/brunch.jpg">
       </div>
     <h2>Greece</h2>
-    <h2>Budapeset</h2>
+      <div class="all-images">
+        <img src="./images/athens.jpg">
+        <img src="./images/gyro.jpg">
+        <img src="./images/ocean.jpg">
+        <img src="./images/greece.jpg">
+        <img src="./images/flowers.jpg">
+        <img src="./images/beach.jpg">
+      </div>
     <h2>Barcelona</h2>
-    <img src="./images/bcn1.jpg">
+      <div class="all-images">
+        <img src="./images/bcn1.jpg">
+        <img src="./images/park.jpg">
+        <img src="./images/churros.jpg">
+        <img src="./images/sagrada.jpg">
+        <img src="./images/purple.jpg">
+        <img src="./images/tapas.jpg">
+      </div>
   </body>
 </html>
