--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Maya & Alexis Europe 2019</h1>
-    <h2 class ="london">London</h2>
+    <h2 class ="london-head">London</h2>
       <div class="all-images">
         <img src="./images/cake.jpg">
         <img src="./images/palace.jpg">
@@ -17,7 +17,7 @@
         <img src="./images/bridge.jpg">
         <img src="./images/phone.jpg">
       </div>
-    <h2>Paris</h2>
+    <h2 class="paris-head">Paris</h2>
       <div class="all-images">
         <img src="./images/paris.jpg">
         <img src="./images/tower.jpg">
@@ -26,7 +26,7 @@
         <img src="./images/louvre.jpg">
         <img src="./images/mona-lisa.jpg">
       </div>
-    <h2>Italy</h2>
+    <h2 class="italy-head">Italy</h2>
       <div class="all-images">
         <img src="./images/coast.jpg">
         <img src="./images/trevi.jpg">
@@ -35,7 +35,7 @@
         <img src="./images/duomo.jpg">
         <img src="./images/rome.jpg">
       </div>
-    <h2>Budapeset</h2>
+    <h2 class="bud-head">Budapeset</h2>
       <div class="all-images">
         <img src="./images/burger.jpg">
         <img src="./images/sunset.jpg">
@@ -53,7 +53,7 @@
         <img src="./images/flowers.jpg">
         <img src="./images/beach.jpg">
       </div>
-    <h2>Barcelona</h2>
+    <h2 class="bar-head">Barcelona</h2>
       <div class="all-images">
         <img src="./images/bcn1.jpg">
         <img src="./images/park.jpg">
