--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title></title>
   </head>
   <body>
-    <h1>Maya & Alexis Europe 2019</h1>
+    <div class="top">
+      <img id="flower" src=https://media1.giphy.com/media/IgkAb57a9GNG63D2qx/source.gif>
+      <img id="flower" src=https://media0.giphy.com/media/2sgEnFszFWZr6A6dmB/giphy.gif>
+      <img id="flower" src=https://media1.giphy.com/media/IgkAb57a9GNG63D2qx/source.gif>
+      <h1>Maya & Alexis Europe 2019</h1>
+      <img id="flower" src=https://media1.giphy.com/media/IgkAb57a9GNG63D2qx/source.gif>
+      <img id="flower" src=https://media0.giphy.com/media/2sgEnFszFWZr6A6dmB/giphy.gif>
+      <img id="flower" src=https://media1.giphy.com/media/IgkAb57a9GNG63D2qx/source.gif>
+    </div>
     <h2 class ="london-head">London</h2>
       <div class="all-images">
         <img src="./images/cake.jpg">
@@ -44,7 +52,7 @@
         <img src="./images/selfie.jpg">
         <img src="./images/brunch.jpg">
       </div>
-    <h2>Greece</h2>
+    <h2 class="greece-head">Greece</h2>
       <div class="all-images">
         <img src="./images/athens.jpg">
         <img src="./images/gyro.jpg">
